syntax = "proto3";

option csharp_namespace = "Project.IdentityService.Protos";
service UserService  {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
}
message CreateUserRequest  {
  string Email = 1;
  string Role = 2;
}
message CreateUserResponse  {
  bool IsSuccess = 1;
  string UserID = 2;
}